src/main/java/com/example/demo/error/GenerationFileNotFoundException.java
package com.example.demo.error;

public class GenerationFileNotFoundException extends RuntimeException {
    public GenerationFileNotFoundException(String message) {
        super(message);
    }
}
